Added getDogHtml from the class
Can now retrieve the objects from data.js using the getDogHtml method on the Dog class

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
           <img class="chat-icon" src="images/chat-icon.png" />
         </div>
       </header>
-      <main>
-        <div class="img-container">
-          <img class="dog-img" src="images/Dog1.png" />
-        </div>
+      <main id="dog-container">
+        <!-- img-container -->
+          <!-- dog-img -->
+          <!-- name-age -->
+          <!-- bio -->
       </main>
       <footer>
         <div class="nope-icon-container">
