Able to get Like and Nope tags
Added some CSS hover effects and the Nope and Like tags are now applied when the heart or x is clicked on

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
           <!-- name-age -->
           <!-- bio -->
       </main>
-      <footer>
-        <div class="nope-icon-container">
-          <img class="nope-icon" src="images/nope-icon.png" />
+      <footer id="footer">
+        <div class="nope-icon-container" id="nope-icon-container">
+          <img class="nope-icon" id="nope-icon" src="images/nope-icon.png" />
         </div>
-        <div class="like-icon-container">
-          <img class="like-icon" src="images/like-icon.png" />
+        <div class="like-icon-container" id="like-icon-container">
+          <img class="like-icon" id="like-icon" src="images/like-icon.png" />
         </div>
       </footer>
     </div>
